--- a/data/web/public/index.html
+++ b/data/web/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Your Hypernode Vagrant is ready for use</title>
+    <title>Your Hypernode test environment is ready for use</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="http://hypernode.com" target="_blank">
@@ -28,10 +28,21 @@
             text-decoration: underline;
         }
 	.nav {
-		margin-top: 50px;
+            margin-top: 50px;
 	}
         nav li:hover {
             background-color: #00374c;
+        }
+	nav #vagrant {
+            background-color: #9dd875;
+            color: #004067;
+            padding: 20px;
+	}
+        nav h3 {
+            margin: 0;
+	}
+        .navbar {
+            border: 0;
         }
         .navbar-brand {
             padding: 40px 15px;
@@ -75,6 +86,7 @@
 <body>
 <header>
     <nav class="navbar" role="navigation">
+        <div id="vagrant"><div class="text-center"><h3>test environment</h3></div></div>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -97,7 +109,7 @@
         <div class="container">
             <div class="row">
                 <div class="center-block">
-                    <h1>Your Hypernode Vagrant is ready for use</h1>
+                    <h1>Your Hypernode test environment is ready for use</h1>
                     <p>Please follow our Getting Started guide at <a href="http://support.hypernode.com/getting-started.html">support.hypernode.com</a>.</p>
                 </div>
             </div>
